# C2Pro

./: .env  .env.example  .env.staging  .gitignore  001_init_schema.sql  AUTHENTICATION.md  C2Pro_Especificacion_Tecnica_v1.0.docx  Critical arquitecture.md  FINAL_SUMMARY_TS-E2E-SEC-TNT-001.md  FRONTEND_TESTING_PLAN.md  GITHUB_ACTIONS_SETUP_COMPLETE.md  INSTRUCCIONES_TESTS.md  Makefile  NEXT_STEPS_TO_RUN_TESTS.md  OLDAgents.md  QUICK_SESSION_SUMMARY.md  QUICK_START.md  README.md  RUN_TESTS_STATUS.md  SCHEMA_SYNC_COMPLETE_REPORT.md  SESSION_PROGRESS_2026-02-07.md  TDD_GREEN_PHASE_STATUS.md  TESTING.md  TESTING_ROLES.md  TEST_ANALYSIS_REPORT.md  TEST_RESULTS_2026-01-06.md  TEST_SUITES_COMPLETED_STATUS.md  agent.md  agents.md  calibration_dataset.example.json  diseño arquitectura.md  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  frontend_development_report.md  installation_failure_report.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
apps/api/: .coverage  .env.test  Dockerfile  README.md  S1.5_ANONYMIZER_IMPLEMENTATION_SUMMARY.md  alembic.ini  create_test_schema.py  dev.py  docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d  docker-compose.test.yml  install_spacy_model.py  migrate.py  models.py  pyproject.toml  requirements-sprint1.txt  requirements.txt  run_tests.bat  setup.py  sqlalchemy_document_repository.py  sqlalchemy_orm.py  test.py  test_anonymizer_standalone.py  test_db_connection.py  test_document_repository.py  test_error_handling_standalone copy.py
apps/api/alembic/: database.md  env.py  repository.py  router.py  upload_document_use_case.py
apps/api/alembic/versions/: 20260104_0000_initial_migration.py  20260124_0001_add_raci_evidence_text.py  20260124_0002_add_approval_status.py  20260205_0001_enable_rls_policies.py
apps/api/examples/: model_flash_example.py
apps/api/scripts/: bootstrap_test_infra.py  generate_openapi.py  knowledge_graph_demo.py  verify_migration_health.py
apps/api/src/: config.py  docker-compose.dev.yml  main.py
apps/api/src/agents/: __init__.py  base_agent.py  raci_generator.py  risk_prompts.py  stakeholder_extractor.py
apps/api/src/ai/: __init__.py  ai_service.py  orchestrator.py
apps/api/src/alerts/: __init__.py  router.py
apps/api/src/analysis/: __init__.py
apps/api/src/bulk_operations/: __init__.py  router.py
apps/api/src/coherence/: README.md  __init__.py  alert_generator.py  config.py  engine.py  engine_v2.py  evaluator.py  llm_integration.py  llm_rule_evaluator.py  models.py  qualitative_rules.yaml  router.py  rules.py  scoring.py  service.py
apps/api/src/core/: CACHE_USAGE.md  CE-S2-009_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_EXAMPLES.md  __init__.py  approval.py  cache.py  celery_app.py  database.py  exceptions.py  handlers.py  middleware.py  observability.py  pagination.py  repositories.py  security.py  test_error_handling.py  types.py  validation.py
apps/api/src/documents/: __init__.py
apps/api/src/mcp/: README.md  __init__.py  router.py
apps/api/src/modules/: __init__.py  config.py  main.py
apps/api/src/procurement/: __init__.py
apps/api/src/projects/: __init__.py
apps/api/src/routers/: LEGACY.md  alerts.py  approvals.py  documents.py  health.py  raci.py  stakeholders.py
apps/api/src/services/: anonymizer.py  budget_alerts.py  knowledge_graph.py  raci_generation_service.py  rag_service.py  source_locator.py  stakeholder_classifier.py
apps/api/src/shared/: storage.py
apps/api/src/stakeholders/: __init__.py
apps/api/src/tasks/: ingestion_tasks.py
apps/api/tests/: FIXTURES_IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  factories.py  test_db_connection.py
apps/api/tests/ai/: test_graph_flow.py  test_model_router.py  test_risk_extractor.py
apps/api/tests/auth/: __init__.py  test_auth_router.py  test_auth_service.py  test_identity.py
apps/api/tests/coherence/: conftest.py  test_engine.py  test_engine_v2.py  test_llm_evaluator.py  test_llm_integration.py  test_rules.py  test_scoring.py
apps/api/tests/core/: __init__.py  test_database.py  test_error_handlers.py  test_middleware.py  test_openapi_docs.py
apps/api/tests/manual/: test_tools_implementation.py
(+1483 files in other folders)
